[package]
name = "ipo"
version = "0.1.0"
edition = "2021"
description = "IPO, or IP Obfuscation, aims to generate different representations for IPv4/IPv6 addresses"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
